# jcflask

./: .flake8  README.md  azure.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: azure-webapp.yaml  main_jcflask.yml
infra/: main.bicep  main.json  main.parameters.json
infra/tests/: test_bicep_syntax.py  test_gunicorn_deploy.py  test_no_secrets.py
src/jcflask/: __init__.py  about.py  admin.py  blog.py  config.py  contact.py  db.py  home.py  landing.py  models.py  portfolio.py  project.py  schema.py
src/jcflask/templates/: about.html  base.html  blog.html  contact.html  gallery.html  hello.html  home.html  index.html  landing.html  portfolio.html  project.html  view_post.html
src/jcflask/templates/admin/: create_post.html  edit_post.html  list_posts.html
src/tests/: conftest.py  test_about.py  test_admin.py  test_base.py  test_blog.py  test_browser.py  test_config.py  test_contact.py  test_factory.py  test_gallery.py  test_home.py  test_landing.py  test_portfolio.py  test_projects.py
