[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jcflask"
version = "0.1.0"
description = "Jack Cooper's flask website."
authors = [{ name = "Jack Cooper" }]
dependencies = [
    "flask",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/tests", "infra/tests"]
addopts = [
    "--import-mode=importlib",
    "--ignore=src/tests/test_browser.py",
]
pythonpath = [
  "src"
]

[tool.coverage.run]
branch = true
source = ["jcflask"]

[tool.pytest_env]
env = [
  "FLASK_ENV=testing",
]